docs/examples/use-cases/hyperledger-cello-usecase/worker-ufw-rules.conf
# Generated by iptables-save v1.6.0 on Tue Mar 19 04:58:05 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o br-7141b8d56620 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-e8ca1119d5c5 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-5e355971f13c -j MASQUERADE
-A POSTROUTING -s 172.20.0.2/32 -d 172.20.0.2/32 -p tcp -m tcp --dport 7050 -j MASQUERADE
-A POSTROUTING -s 172.20.0.3/32 -d 172.20.0.3/32 -p tcp -m tcp --dport 7054 -j MASQUERADE
-A POSTROUTING -s 172.20.0.4/32 -d 172.20.0.4/32 -p tcp -m tcp --dport 7054 -j MASQUERADE
-A POSTROUTING -s 172.20.0.5/32 -d 172.20.0.5/32 -p tcp -m tcp --dport 7053 -j MASQUERADE
-A POSTROUTING -s 172.20.0.5/32 -d 172.20.0.5/32 -p tcp -m tcp --dport 7051 -j MASQUERADE
-A POSTROUTING -s 172.20.0.6/32 -d 172.20.0.6/32 -p tcp -m tcp --dport 7053 -j MASQUERADE
-A POSTROUTING -s 172.20.0.8/32 -d 172.20.0.8/32 -p tcp -m tcp --dport 7053 -j MASQUERADE
-A POSTROUTING -s 172.20.0.7/32 -d 172.20.0.7/32 -p tcp -m tcp --dport 7053 -j MASQUERADE
-A POSTROUTING -s 172.20.0.6/32 -d 172.20.0.6/32 -p tcp -m tcp --dport 7051 -j MASQUERADE
-A POSTROUTING -s 172.20.0.8/32 -d 172.20.0.8/32 -p tcp -m tcp --dport 7051 -j MASQUERADE
-A POSTROUTING -s 172.20.0.7/32 -d 172.20.0.7/32 -p tcp -m tcp --dport 7051 -j MASQUERADE
-A DOCKER -i br-7141b8d56620 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-e8ca1119d5c5 -j RETURN
-A DOCKER -i br-5e355971f13c -j RETURN
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 8050 -j DNAT --to-destination 172.20.0.2:7050
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7850 -j DNAT --to-destination 172.20.0.3:7054
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7950 -j DNAT --to-destination 172.20.0.4:7054
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7550 -j DNAT --to-destination 172.20.0.5:7053
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7450 -j DNAT --to-destination 172.20.0.5:7051
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7750 -j DNAT --to-destination 172.20.0.6:7053
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7350 -j DNAT --to-destination 172.20.0.8:7053
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7150 -j DNAT --to-destination 172.20.0.7:7053
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7650 -j DNAT --to-destination 172.20.0.6:7051
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7250 -j DNAT --to-destination 172.20.0.8:7051
-A DOCKER ! -i br-7141b8d56620 -p tcp -m tcp --dport 7050 -j DNAT --to-destination 172.20.0.7:7051
COMMIT
# Completed on Tue Mar 19 04:58:05 2019
# Generated by iptables-save v1.6.0 on Tue Mar 19 04:58:05 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-7141b8d56620 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7141b8d56620 -j DOCKER
-A FORWARD -i br-7141b8d56620 ! -o br-7141b8d56620 -j ACCEPT
-A FORWARD -i br-7141b8d56620 -o br-7141b8d56620 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-e8ca1119d5c5 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-e8ca1119d5c5 -j DOCKER
-A FORWARD -i br-e8ca1119d5c5 ! -o br-e8ca1119d5c5 -j ACCEPT
-A FORWARD -i br-e8ca1119d5c5 -o br-e8ca1119d5c5 -j ACCEPT
-A FORWARD -o br-5e355971f13c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-5e355971f13c -j DOCKER
-A FORWARD -i br-5e355971f13c ! -o br-5e355971f13c -j ACCEPT
-A FORWARD -i br-5e355971f13c -o br-5e355971f13c -j ACCEPT
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A DOCKER -d 172.20.0.2/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7050 -j ACCEPT
-A DOCKER -d 172.20.0.3/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7054 -j ACCEPT
-A DOCKER -d 172.20.0.4/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7054 -j ACCEPT
-A DOCKER -d 172.20.0.5/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7053 -j ACCEPT
-A DOCKER -d 172.20.0.5/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7051 -j ACCEPT
-A DOCKER -d 172.20.0.6/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7053 -j ACCEPT
-A DOCKER -d 172.20.0.8/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7053 -j ACCEPT
-A DOCKER -d 172.20.0.7/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7053 -j ACCEPT
-A DOCKER -d 172.20.0.6/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7051 -j ACCEPT
-A DOCKER -d 172.20.0.8/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7051 -j ACCEPT
-A DOCKER -d 172.20.0.7/32 ! -i br-7141b8d56620 -o br-7141b8d56620 -p tcp -m tcp --dport 7051 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-7141b8d56620 ! -o br-7141b8d56620 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-e8ca1119d5c5 ! -o br-e8ca1119d5c5 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-5e355971f13c ! -o br-5e355971f13c -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-7141b8d56620 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-e8ca1119d5c5 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-5e355971f13c -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 2375 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 2375 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 2375 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Tue Mar 19 04:58:05 2019
